--- a/FacebookPageSdk.WpfUi/MainWindow.xaml
+++ b/FacebookPageSdk.WpfUi/MainWindow.xaml
@@ -33,7 +33,23 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <wpf:ChromiumWebBrowser   x:Name="Browser"  />
-            <DataGrid Grid.Column="1" x:Name="dg" ></DataGrid>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid Margin="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Label x:Name="SearchCount" Content="Toplam Post Sayısı: "/>
+                    <TextBox Grid.Column="1" x:Name="SearchBox" Margin="5,0"/>
+                    <Button Grid.Column="2" x:Name="BtnSearch" Content="ARA" />
+                </Grid>
+                <DataGrid  IsReadOnly="True" Grid.Row="1" x:Name="dg" ></DataGrid>
+            </Grid>
         </Grid>
     </Grid>
 </Window>
